--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,11 @@ hr{
     color: white;
     border-top-right-radius: 1rem;
 }
+
+.footer .footer-header{
+    font-weight: bold;
+    font-size: large;
+}
 .footer .link{
     color: white;
 }
