--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,13 @@ body{
 hr{
     margin: 2rem 0rem;
 }
+
+/* spaces */
+
+.margin-md{
+    margin: 2rem;
+}
+
 /* container */
 .container{
     padding-left: 1rem;
@@ -77,6 +84,7 @@ hr{
 
 .hero{
     padding: 2rem;
+    padding-top: 5rem;
 }
 .hero .hero-img{
     max-width: 350px;
